fix: Add NVIDIA_DRIVER_CAPABILITIES=all to all Nvidia Docker-Compose files and add corresponding documentation

--- a/examples/lpms-ros-docker/docker/docker-compose-gui-nvidia.yml
+++ b/examples/lpms-ros-docker/docker/docker-compose-gui-nvidia.yml
@@ -6,4 +6,5 @@ services:
       service: lpms_ros
     environment:
      - NVIDIA_VISIBLE_DEVICES=all
+     - NVIDIA_DRIVER_CAPABILITIES=all
     runtime: nvidia
