--- a/templates/ros/docker/docker-compose-gui-nvidia.yml
+++ b/templates/ros/docker/docker-compose-gui-nvidia.yml
@@ -6,4 +6,5 @@ services:
       service: ros_docker
     environment:
      - NVIDIA_VISIBLE_DEVICES=all
+     - NVIDIA_DRIVER_CAPABILITIES=all
     runtime: nvidia
