--- a/templates/ros/.devcontainer/devcontainer.json
+++ b/templates/ros/.devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 {
   "name": "ROS Docker",
   "dockerComposeFile": [
-    "../docker/docker-compose.yml" // Alternatives: "../docker/docker-compose-gui.yml", "../docker/docker-compose-gui-nvidia.yml", "../docker/docker-compose-nvidia.yml"
+    "../docker/docker-compose-gui.yml" // Alternatives: "../docker/docker-compose-gui.yml", "../docker/docker-compose-gui-nvidia.yml", "../docker/docker-compose-nvidia.yml"
   ],
   "service": "ros_docker",
-  "workspaceFolder": "/ros_ws",
+  "workspaceFolder": "/catkin_ws",
   "shutdownAction": "stopCompose",
   "extensions": [
   ]
