feat: Refactor ROS 2 workspace template with multi-stage base and development image adding user and rename workspace to ament_ws

--- a/templates/ros2/.devcontainer/devcontainer.json
+++ b/templates/ros2/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
     "../docker/docker-compose-gui.yml" // Alternatives: "../docker/docker-compose-gui.yml", "../docker/docker-compose-gui-nvidia.yml"
   ],
   "service": "ros2_docker",
-  "workspaceFolder": "/ros2_ws",
+  "workspaceFolder": "/ament_ws",
   "shutdownAction": "stopCompose",
   "extensions": [
   ]
