--- a/templates/ros2/docker/.env
+++ b/templates/ros2/docker/.env
@@ -1,4 +1,6 @@
-ROBOT_IP="127.0.0.1"
-ROBOT_HOSTNAME="P500"
+AMENT_WORKSPACE_DIR="/ament_ws"
+ROS_DOMAIN_ID=0
 YOUR_IP="127.0.0.1"
-YOUR_NETWORK_INTERFACE="eno1"
+ROBOT_IP="192.168.0.66"
+ROBOT_HOSTNAME="T14"
+
