feat: Update configuration to localhost per default

--- a/templates/ros2/docker/.env
+++ b/templates/ros2/docker/.env
@@ -1,6 +1,6 @@
 AMENT_WORKSPACE_DIR="/ament_ws"
 ROS_DOMAIN_ID=0
 YOUR_IP="127.0.0.1"
-ROBOT_IP="192.168.0.66"
-ROBOT_HOSTNAME="T14"
+ROBOT_IP="127.0.0.1"
+ROBOT_HOSTNAME="P500"
 
