--- a/templates/ros2/docker/Dockerfile
+++ b/templates/ros2/docker/Dockerfile
@@ -40,6 +40,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update \
  && apt-get install -y \
+    iperf \
     iputils-ping \
     net-tools \
     python3-vcstool \
