feat: Make workspace folder name argument of Dockerfile

--- a/templates/ros/docker/.env
+++ b/templates/ros/docker/.env
@@ -1,3 +1,5 @@
-ROS_MASTER_IP="127.0.0.1"
-ROS_MASTER_HOSTNAME="P500"
+CATKIN_WORKSPACE_DIR="/catkin_ws"
 YOUR_IP="127.0.0.1"
+ROBOT_IP="127.0.0.1"
+ROBOT_HOSTNAME="P500"
+
