--- a/templates/ros/docker/docker-compose.yml
+++ b/templates/ros/docker/docker-compose.yml
@@ -6,17 +6,18 @@ services:
       dockerfile: docker/Dockerfile
       target: dev
       args:
+        - CATKIN_WORKSPACE_DIR=${CATKIN_WORKSPACE_DIR}
         - USERNAME=${USERNAME:-developer}
         - UID=${UID:-1000}
         - GID=${UID:-1000}
     container_name: ros_docker
     environment:
-      - ROS_MASTER_URI=http://${ROS_MASTER_IP}:11311
+      - ROS_MASTER_URI=http://${ROBOT_IP}:11311
       - ROS_IP=${YOUR_IP}
     extra_hosts:
-      - "${ROS_MASTER_HOSTNAME}:${ROS_MASTER_IP}"
+      - "${ROBOT_HOSTNAME}:${ROBOT_IP}"
     network_mode: "host"
     tty: true
     volumes:
-      - ../src:/catkin_ws/src
+      - ../src:/${CATKIN_WORKSPACE_DIR}/src
 
