--- a/templates/ros/docker/Dockerfile
+++ b/templates/ros/docker/Dockerfile
@@ -3,8 +3,8 @@
 ##############
 FROM ros:noetic-robot as base
 
-ENV ROS_WS_DIR="/catkin_ws"
-WORKDIR ${ROS_WS_DIR}
+ARG CATKIN_WORKSPACE_DIR=${CATKIN_WORKSPACE_DIR}
+WORKDIR ${CATKIN_WORKSPACE_DIR}
 
 SHELL ["/bin/bash", "-c"]
 
@@ -35,6 +35,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update \
  && apt-get install -y \
+    iperf \
     iputils-ping \
     net-tools \
     python3-vcstool \
@@ -53,14 +54,14 @@ RUN addgroup --gid ${GID} ${USERNAME} \
  && adduser --disabled-password --gecos '' --uid ${GID} --gid ${GID} ${USERNAME} \
  && echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} \
  && chown -R ${UID}:${GID} /home/${USERNAME} \
- && chown -R ${UID}:${GID} ${ROS_WS_DIR}
+ && chown -R ${UID}:${GID} ${CATKIN_WORKSPACE_DIR}
 
-COPY "/.vscode" "${ROS_WS_DIR}/.vscode"
-RUN sed -i -E "s/(ROS_DISTRO=\\$\{1:-\").*(\"\})/\1${ROS_DISTRO}\2/" ${ROS_WS_DIR}/.vscode/ros_source.bash \
- && echo "alias rsource='source ${ROS_WS_DIR}/.vscode/ros_source.bash'" >> /home/${USERNAME}/.bash_aliases \
- && echo "alias rbuild='(cd ${ROS_WS_DIR} && catkin build)'" >> /home/${USERNAME}/.bash_aliases \
- && echo "alias rclean='(cd ${ROS_WS_DIR} && catkin clean -y)'" >> /home/${USERNAME}/.bash_aliases \
- && echo "source ${ROS_WS_DIR}/.vscode/ros_source.bash" >> /home/${USERNAME}/.bashrc
+COPY "/.vscode" "${CATKIN_WORKSPACE_DIR}/.vscode"
+RUN sed -i -E "s/(ROS_DISTRO=\\$\{1:-\").*(\"\})/\1${ROS_DISTRO}\2/" ${CATKIN_WORKSPACE_DIR}/.vscode/ros_source.bash \
+ && echo "alias rsource='source ${CATKIN_WORKSPACE_DIR}/.vscode/ros_source.bash'" >> /home/${USERNAME}/.bash_aliases \
+ && echo "alias rbuild='(cd ${CATKIN_WORKSPACE_DIR} && catkin build)'" >> /home/${USERNAME}/.bash_aliases \
+ && echo "alias rclean='(cd ${CATKIN_WORKSPACE_DIR} && catkin clean -y)'" >> /home/${USERNAME}/.bash_aliases \
+ && echo "source ${CATKIN_WORKSPACE_DIR}/.vscode/ros_source.bash" >> /home/${USERNAME}/.bashrc
 
 USER ${USERNAME}
 
