--- a/templates/ros/docker/docker-compose.yml
+++ b/templates/ros/docker/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - ROS_IP=${YOUR_IP}
     extra_hosts:
       - "${ROBOT_HOSTNAME}:${ROBOT_IP}"
+    image: ros_template:devel
     network_mode: "host"
     tty: true
     volumes:
