--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,15 @@
 [submodule "examples/velodyne-ros2-docker"]
 	path = examples/velodyne-ros2-docker
 	url = https://github.com/2b-t/velodyne-ros2-docker
+[submodule "examples/affordance-templates-ros-docker/src/affordance_templates"]
+	path = examples/affordance-templates-ros-docker/src/affordance_templates
+	url = https://bitbucket.org/traclabs/affordance_templates.git
+[submodule "examples/affordance-templates-ros-docker/src/nasa_r2_common"]
+	path = examples/affordance-templates-ros-docker/src/nasa_r2_common
+	url = https://bitbucket.org/traclabs/nasa_r2_common.git
+[submodule "examples/affordance-templates-ros-docker/src/nasa_r2_simulator"]
+	path = examples/affordance-templates-ros-docker/src/nasa_r2_simulator
+	url = https://bitbucket.org/traclabs/nasa_r2_simulator.git
+[submodule "examples/affordance-templates-ros-docker/src/robot_interaction_tools"]
+	path = examples/affordance-templates-ros-docker/src/robot_interaction_tools
+	url = https://bitbucket.org/traclabs/robot_interaction_tools.git
