docs: Add labels to Docker image

--- a/templates/ros2/docker/Dockerfile
+++ b/templates/ros2/docker/Dockerfile
@@ -4,8 +4,12 @@
 FROM ros:humble-ros-base as base
 
 ARG AMENT_WORKSPACE_DIR=${AMENT_WORKSPACE_DIR}
-WORKDIR ${AMENT_WORKSPACE_DIR}
 
+LABEL org.opencontainers.image.authors="tobit.flatscher@outlook.com"
+LABEL description="ROS 2 Humble Docker template"
+LABEL version="1.0"
+
+WORKDIR ${AMENT_WORKSPACE_DIR}
 SHELL ["/bin/bash", "-c"]
 
 ENV DEBIAN_FRONTEND=noninteractive
@@ -55,7 +59,10 @@ RUN apt-get update \
 
 ENV DEBIAN_FRONTEND=dialog
 
-RUN addgroup --gid ${GID} ${USERNAME} \
+RUN apt-get update \
+ && apt-get install -y sudo \
+ && rm -rf /var/lib/apt/lists/* \
+ && addgroup --gid ${GID} ${USERNAME} \
  && adduser --disabled-password --gecos '' --uid ${GID} --gid ${GID} ${USERNAME} \
  && echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} \
  && chown -R ${UID}:${GID} /home/${USERNAME} \
