fix: Remove forward slash from Docker volume

--- a/templates/ros/docker/docker-compose.yml
+++ b/templates/ros/docker/docker-compose.yml
@@ -20,5 +20,5 @@ services:
     network_mode: "host"
     tty: true
     volumes:
-      - ../src:/${CATKIN_WORKSPACE_DIR}/src
+      - ../src:${CATKIN_WORKSPACE_DIR}/src
 
