--- a/templates/ros2/.vscode/tasks.json
+++ b/templates/ros2/.vscode/tasks.json
@@ -4,85 +4,84 @@
   // for the documentation about the tasks.json format
   "version": "2.0.0",
   "tasks": [
-    // Source the workspace (not working as dependsOn will use a new console)
-    {
-      "label": "source",
-      "detail": "Source the current environment variables.",
-      "type": "shell",
-      "command": "source ${workspaceFolder}/.vscode/ros2_source.bash",
-      "problemMatcher": []
-    },
     // Import repositories with vcs tool
     {
       "label": "vcs",
       "detail": "Import dependencies with vcs tool.",
       "type": "shell",
-      "command": "source ${workspaceFolder}/.vscode/ros2_source.bash && (cd ${workspaceFolder}/src && vcs import < .repos)",
-      "problemMatcher": []
+      "command": "vcs import < .repos",
+      "options": {
+        "cwd": "${workspaceFolder}/src"
+      }
     },
     // Install ROS dependencies
     {
       "label": "install dependencies",
       "detail": "Install all dependencies specified in the workspaces package.xml files.",
       "type": "shell",
-      "command": "source ${workspaceFolder}/.vscode/ros2_source.bash && (cd ${workspaceFolder} && sudo apt-get update -y && rosdep update && rosdep install --from-paths src --ignore-src -y)",
-      "problemMatcher": [],
-      "dependsOn": []
+      "command": "sudo apt-get update -y && rosdep update && rosdep install --from-paths src --ignore-src -y",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      }
     },
     // Build tasks
     {
       "label": "build",
-      "detail": "Build the workspace (default).",
+      "detail": "Build the workspace (release).",
       "type": "shell",
-      "command": "source ${workspaceFolder}/.vscode/ros2_source.bash && (cd ${workspaceFolder} && colcon build --symlink-install --cmake-args '-DCMAKE_BUILD_TYPE=Release' -Wall -Wextra -Wpedantic)",
+      "command": "colcon build --symlink-install --cmake-args '-DCMAKE_BUILD_TYPE=Release' -Wall -Wextra -Wpedantic",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
       "group": {
         "kind": "build",
         "isDefault": true
       },
-      "problemMatcher": "$gcc",
-      "dependsOn": [
-        "install dependencies"
-      ]
+      "problemMatcher": "$gcc"
     },
     {
-      "label": "debug",
+      "label": "build debug",
       "detail": "Build the workspace (debug).",
       "type": "shell",
-      "command": "source ${workspaceFolder}/.vscode/ros2_source.bash && (cd ${workspaceFolder} && colcon build --symlink-install --cmake-args '-DCMAKE_BUILD_TYPE=Debug' -Wall -Wextra -Wpedantic)",
+      "command": "colcon build --symlink-install --cmake-args '-DCMAKE_BUILD_TYPE=Debug' -Wall -Wextra -Wpedantic",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
       "group": "build",
-      "problemMatcher": "$gcc",
-      "dependsOn": [
-        "install dependencies"
-      ]
+      "problemMatcher": "$gcc"
     },
     // Test tasks
     {
       "label": "test",
       "detail": "Run all unit tests and show results.",
       "type": "shell",
-      "command": "source ${workspaceFolder}/.vscode/ros2_source.bash && (cd ${workspaceFolder} && colcon test)",
+      "command": "colcon test",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
       "group": {
         "kind": "test",
         "isDefault": true
-      },
-      "dependsOn": [
-        "install dependencies"
-      ]
+      }
     },
-    // Clean
+    // Clean tasks
     {
       "label": "clean",
       "detail": "Run the clean target.",
       "type": "shell",
-      "command": "source ${workspaceFolder}/.vscode/ros2_source.bash && (cd ${workspaceFolder} && colcon clean workspace --yes)",
-      "problemMatcher": []
+      "command": "colcon clean workspace --yes",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      }
     },
     {
       "label": "purge",
       "detail": "Purge workspace by deleting all generated files.",
       "type": "shell",
-      "command": "(cd ${workspaceFolder} && rm -fr build install log && py3clean .)",
-      "problemMatcher": []
+      "command": "rm -fr build install log && py3clean .",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      }
     }
   ],
   "inputs": [
