feat: Add stage for Visual Studio Code configuration

--- a/templates/ros/docker/Dockerfile
+++ b/templates/ros/docker/Dockerfile
@@ -63,12 +63,17 @@ RUN apt-get update \
  && chown -R ${UID}:${GID} /home/${USERNAME} \
  && chown -R ${UID}:${GID} ${CATKIN_WORKSPACE_DIR}
 
-COPY "/.vscode" "${CATKIN_WORKSPACE_DIR}/.vscode"
-RUN sed -i -E "s/(ROS_DISTRO=\\$\{1:-\").*(\"\})/\1${ROS_DISTRO}\2/" ${CATKIN_WORKSPACE_DIR}/.vscode/ros_source.bash \
- && echo "alias rsource='source ${CATKIN_WORKSPACE_DIR}/.vscode/ros_source.bash'" >> /home/${USERNAME}/.bash_aliases \
+USER ${USERNAME}
+
+
+############################
+# Visual Studio Code image #
+############################
+FROM dev as vsc
+
+COPY ".vscode" "${CATKIN_WORKSPACE_DIR}/.vscode"
+RUN echo "alias rsource='source ${CATKIN_WORKSPACE_DIR}/.vscode/ros_source.bash ${ROS_DISTRO}'" >> /home/${USERNAME}/.bash_aliases \
  && echo "alias rbuild='(cd ${CATKIN_WORKSPACE_DIR} && catkin build)'" >> /home/${USERNAME}/.bash_aliases \
  && echo "alias rclean='(cd ${CATKIN_WORKSPACE_DIR} && catkin clean -y)'" >> /home/${USERNAME}/.bash_aliases \
- && echo "source ${CATKIN_WORKSPACE_DIR}/.vscode/ros_source.bash" >> /home/${USERNAME}/.bashrc
-
-USER ${USERNAME}
+ && echo "rsource" >> /home/${USERNAME}/.bashrc
 
