--- a/templates/ros/.devcontainer/devcontainer.json
+++ b/templates/ros/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "ROS Docker",
   "dockerComposeFile": [
-    "../docker/docker-compose-gui.yml" // Alternatives: "../docker/docker-compose-gui.yml", "../docker/docker-compose-gui-nvidia.yml", "../docker/docker-compose-nvidia.yml"
+    "../docker/docker-compose-vscode.yml"
   ],
   "service": "ros_docker",
   "workspaceFolder": "/catkin_ws",
