--- a/templates/ros/docker/docker-compose-vscode.yml
+++ b/templates/ros/docker/docker-compose-vscode.yml
@@ -4,8 +4,6 @@ services:
     extends:
       file: docker-compose-gui.yml
       service: ros_docker
-    environment:
-     - NVIDIA_VISIBLE_DEVICES=all
-     - NVIDIA_DRIVER_CAPABILITIES=all
-    runtime: nvidia
+    volumes:
+      - ../.vscode:${CATKIN_WORKSPACE_DIR}/.vscode
 
