--- a/templates/ros2/.devcontainer/devcontainer.json
+++ b/templates/ros2/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "ROS2 Docker",
   "dockerComposeFile": [
-    "../docker/docker-compose-gui.yml" // Alternatives: "../docker/docker-compose-gui.yml", "../docker/docker-compose-gui-nvidia.yml"
+    "../docker/docker-compose-vscode.yml"
   ],
   "service": "ros2_docker",
   "workspaceFolder": "/ament_ws",
