--- a/templates/ros2/.vscode/tasks.json
+++ b/templates/ros2/.vscode/tasks.json
@@ -12,7 +12,8 @@
       "command": "vcs import < .repos",
       "options": {
         "cwd": "${workspaceFolder}/src"
-      }
+      },
+      "problemMatcher": []
     },
     // Install ROS dependencies
     {
@@ -22,7 +23,8 @@
       "command": "sudo apt-get update -y && rosdep update && rosdep install --from-paths src --ignore-src -y",
       "options": {
         "cwd": "${workspaceFolder}"
-      }
+      },
+      "problemMatcher": []
     },
     // Build tasks
     {
@@ -62,7 +64,8 @@
       "group": {
         "kind": "test",
         "isDefault": true
-      }
+      },
+      "problemMatcher": []
     },
     // Clean tasks
     {
@@ -72,7 +75,8 @@
       "command": "colcon clean workspace --yes",
       "options": {
         "cwd": "${workspaceFolder}"
-      }
+      },
+      "problemMatcher": []
     },
     {
       "label": "purge",
@@ -81,7 +85,8 @@
       "command": "rm -fr build install log && py3clean .",
       "options": {
         "cwd": "${workspaceFolder}"
-      }
+      },
+      "problemMatcher": []
     }
   ],
   "inputs": [
