--- a/templates/ros2/docker/Dockerfile
+++ b/templates/ros2/docker/Dockerfile
@@ -45,6 +45,8 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
  && apt-get install -y \
     ack \
+    cloc \
+    gdb \
     htop \
     iperf3 \
     iputils-ping \
@@ -52,6 +54,7 @@ RUN apt-get update \
     net-tools \
     psmisc \
     python3-vcstool \
+    tmux \
  && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update \
