fix: Move user and group id to environment file

--- a/templates/ros/docker/.env
+++ b/templates/ros/docker/.env
@@ -1,5 +1,6 @@
-CATKIN_WORKSPACE_DIR="/catkin_ws"
-YOUR_IP="127.0.0.1"
-ROBOT_IP="127.0.0.1"
-ROBOT_HOSTNAME="P500"
-
+CATKIN_WORKSPACE_DIR=/catkin_ws
+YOUR_IP=127.0.0.1
+ROBOT_IP=127.0.0.1
+ROBOT_HOSTNAME=P500
+UID=1000
+GID=1000
