--- a/templates/ros2/docker/.env
+++ b/templates/ros2/docker/.env
@@ -1,6 +1,7 @@
-AMENT_WORKSPACE_DIR="/ament_ws"
+AMENT_WORKSPACE_DIR=/ament_ws
 ROS_DOMAIN_ID=0
-YOUR_IP="127.0.0.1"
-ROBOT_IP="127.0.0.1"
-ROBOT_HOSTNAME="P500"
-
+YOUR_IP=127.0.0.1
+ROBOT_IP=127.0.0.1
+ROBOT_HOSTNAME=P500
+UID=1000
+GID=1000
