--- a/.github/workflows/build-ros.yml
+++ b/.github/workflows/build-ros.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Build the Dockerfile with Docker-Compose
-        run: docker-compose -f templates/ros/docker/docker-compose.yml build
+        run: docker compose -f templates/ros/docker/docker-compose.yml build
 
