feat: Add configuration for Visual Studio Code ROS extension and give Docker privileges to run GDB

--- a/templates/ros/docker/docker-compose-vscode.yml
+++ b/templates/ros/docker/docker-compose-vscode.yml
@@ -4,6 +4,9 @@ services:
     extends:
       file: docker-compose-gui.yml
       service: ros_docker
+    cap_add:
+      # Required for GDB debugging with ROS extension
+      - SYS_PTRACE
     volumes:
       - ../.vscode:${CATKIN_WORKSPACE_DIR}/.vscode
 
