--- a/templates/ros/docker/docker-compose.yml
+++ b/templates/ros/docker/docker-compose.yml
@@ -17,8 +17,15 @@ services:
     extra_hosts:
       - "${ROBOT_HOSTNAME}:${ROBOT_IP}"
     image: ros_template:devel
+    # Required for communicating over the network
     network_mode: "host"
+    # Required for accessing hardware
+    #privileged: true
     tty: true
     volumes:
+      # Required for accessing hardware
+      #- /dev:/dev
+      # Required for accessing storage media
+      #- /media:/media
       - ../src:${CATKIN_WORKSPACE_DIR}/src
 
