--- a/templates/ros2/docker/docker-compose.yml
+++ b/templates/ros2/docker/docker-compose.yml
@@ -18,7 +18,8 @@ services:
       - YOUR_IP=${YOUR_IP}
       - ROBOT_IP=${ROBOT_IP}
       - RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
-      - CYCLONEDDS_URI=${AMENT_WORKSPACE_DIR}/dds/cyclone.xml
+      # Configure Cyclone with a custom configuration using the IPs above
+      #- CYCLONEDDS_URI=${AMENT_WORKSPACE_DIR}/dds/cyclone.xml
     extra_hosts:
       - "${ROBOT_HOSTNAME}:${ROBOT_IP}"
     image: ros2_template:devel
