feat: Add bmon for network monitoring

--- a/templates/ros2/docker/Dockerfile
+++ b/templates/ros2/docker/Dockerfile
@@ -51,6 +51,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
  && apt-get install -y \
     ack \
+    bmon \
     cloc \
     gdb \
     htop \
