--- a/templates/ros/docker/Dockerfile
+++ b/templates/ros/docker/Dockerfile
@@ -48,6 +48,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
  && apt-get install -y \
     ack \
+    bmon \
     cloc \
     gdb \
     htop \
