docs: Add documentation on shared memory intra-process communication in ROS 2

--- a/templates/ros2/docker/docker-compose.yml
+++ b/templates/ros2/docker/docker-compose.yml
@@ -35,4 +35,6 @@ services:
       #- /media:/media
       - ../src:${AMENT_WORKSPACE_DIR}/src
       - ../dds:${AMENT_WORKSPACE_DIR}/dds
+      # Required for ROS 2 shared memory communication
+      #- /dev/shm:/dev/shm
 
