feat: Add Pylint and Mypy linters to default ROS 2 container configuration

--- a/templates/ros2/.devcontainer/devcontainer.json
+++ b/templates/ros2/.devcontainer/devcontainer.json
@@ -10,6 +10,8 @@
     "vscode": {
       "extensions": [
         "ms-iot.vscode-ros",
+        "ms-python.mypy-type-checker",
+        "ms-python.pylint",
         "ms-python.python",
         "ms-vscode.cmake-tools",
         "ms-vscode.cpptools"
